tests/errors/AssignUninitializedScalar.imp
VAR
  a b
BEGIN
  a := b;
END
